# ConsoleChess

./: .gitignore  CMakeLists.txt  ConsoleChess  README.md  board.cpp  board.h  build.sh  defines.h  game.cpp  game.h  interface.cpp  interface.h  knight.cpp  knight.h  main.cpp  move.cpp  move.h  piece.cpp  piece.h  player.h
.github/workflows/: cmake.yml
bishop/: bishop.cpp  bishop.h  test_bishop.cpp  test_bishop.h
board/: board.cpp  board.h  test_board.cpp
king/: king.cpp  king.h  test_king.cpp  test_king.h
knight/: knight.cpp  knight.h  test_knight.cpp  test_knight.h
pawn/: pawn.h  test_pawn.cpp
queen/: queen.cpp  queen.h
rook/: rook.cpp  rook.h  test_rook.cpp  test_rook.h
source/: CMakeLists.txt  console_chess.h  defines.cpp  defines.h  game.cpp  game.h  interface.cpp  main.cpp  move.cpp  move.h  piece.cpp  piece.h  square.cpp  square.h
source/algebraic_notation/: algebraic_notation.cpp  algebraic_notation.h  test_algebraic.cpp  test_algebraic.h
source/bishop/: bishop.cpp  bishop.h  test_bishop.cpp
source/board/: board.cpp  board.h  test_board.cpp  test_board.h
source/fen/: FEN.cpp  FEN.h  test_FEN.cpp  test_FEN.h
source/interface/: interface.cpp  interface.h  test_interface.cpp  test_interface.h
source/king/: king.cpp  king.h  test_king.cpp
source/knight/: knight.cpp  knight.h  test_knight.cpp
source/pawn/: pawn.cpp  pawn.h  test_pawn.cpp  test_pawn.h
source/queen/: queen.cpp  queen.h  test_queen.cpp  test_queen.h
source/rook/: rook.cpp  rook.h  test_rook.cpp
source/testing/: main_tests.cpp  test.cpp  test.h  test_suite.cpp  test_suite.h  tester.cpp  tester.h
testing/: main_tests.cpp  test.cpp  test.h  test_suite.cpp  test_suite.h  tester.cpp  tester.h
